nok-base/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-gitea-ingress
  namespace: nok-base
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1 # Rewrites the URL path for the backend service
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: gitea.nok.local # kpt-set: ${ingress-host}
    http:
      paths:     
#      - path: /prometheus(/|$)(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
